--- a/static/less/custom-other.less
+++ b/static/less/custom-other.less
@@ -35,7 +35,7 @@
        .color-F { background: @marron }
 
 
-// =========== Custom background =====================
+// =========== background graphics =====================
 
   //  mixin gradient for html background
     .website-bg-gradient  (@start-color: lighten(@bg-grad-top, 10%); 
@@ -56,6 +56,7 @@
       box-shadow:         @string;
     }
 
+  // styles for background graphics
   html {
       margin: 0;
       background-repeat: no-repeat;
@@ -63,83 +64,90 @@
       // background gradient mixin
       .website-bg-gradient;
 
-  }
 
-  body {
-    // bg image in "body" position to the left
-    background: url(../img/Licorne-tete.png) no-repeat -5% 90%;
-      
-    // bg image in "div.bg-deco-right" position to the right 
-    .bg-deco-right {
-      background: url(../img/Licorne-queue.png) no-repeat 103% 70%;
-    }
-
-    // shadow at top of window
-    &:before {
-    content: "";
-    position: fixed;
-    top: -10px;
-    left: 0;
-    width: 100%;
-    height: 10px;
-    z-index: 100;
-    //  mixin for shadow inset at top of window
-    .website-top-shadow;
-  }
-}
-
-
-  header.logo-container {
-
-    /* Small devices (tablets, 768px and up) */
-    @media (min-width: @screen-sm-min) {
-      margin-bottom: 86px;
-    }
-    
-    /* Medium devices (desktops, 992px and up) */
-    @media (min-width: @screen-md-min) { 
-      margin-bottom: 112px;
-    }
-
-    /* Large devices (large desktops, 1200px and up) */
-    @media (min-width: @screen-lg-min) { 
-      margin-bottom: 135px;
-    }
-
-    img.logo-small {
-      max-width: 50%;
-      min-width: 250px;
-      margin: auto;
-      margin-bottom: -5%;
-    }
-
-    img.clouds, img.logo-big {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      z-index: -1;
-
-      /* Small devices (tablets, 768px and up) */
-      @media (min-width: @screen-sm-min) {
-        margin-left: -490px;
-        width: 979px;
-      }
-      
-      /* Medium devices (desktops, 992px and up) */
-      @media (min-width: @screen-md-min) { 
-        margin-left: -646px;
-        width: 1292px;
+    body {
+      // bg image in "body" position to the left
+      background: url(../img/Licorne-tete.png) no-repeat -5% 90%;
+        
+      // bg image in "div.bg-deco-right" position to the right 
+      .bg-deco-right {
+        background: url(../img/Licorne-queue.png) no-repeat 103% 70%;
       }
 
-      /* Large devices (large desktops, 1200px and up) */
-      @media (min-width: @screen-lg-min) { 
-        margin-left: -788px;
-        width: 1577px;
+      // shadow at top of window
+      &:before {
+      content: "";
+      position: fixed;
+      top: -10px;
+      left: 0;
+      width: 100%;
+      height: 10px;
+      z-index: 100;
+      //  mixin for shadow inset at top of window
+      .website-top-shadow;
       }
-    }
-  }
 
-// ----------- /end Custom background ------------------
+      header.logo-container {
+
+        /* Small devices (tablets, 768px and up) */
+        @media (min-width: @screen-sm-min) {
+          margin-bottom: 86px;
+        }
+        
+        /* Medium devices (desktops, 992px and up) */
+        @media (min-width: @screen-md-min) { 
+          margin-bottom: 112px;
+        }
+
+        /* Large devices (large desktops, 1200px and up) */
+        @media (min-width: @screen-lg-min) { 
+          margin-bottom: 135px;
+        }
+
+        img.logo-small {
+          .img-responsive; 
+          .visible-xs;
+          max-width: 50%;
+          min-width: 250px;
+          margin: auto;
+          margin-bottom: -5%;
+        }
+
+        img.clouds, img.logo-big {
+          .hidden-xs;
+          position: absolute;
+          top: 0;
+          left: 50%;
+          z-index: -1;
+
+          /* Small devices (tablets, 768px and up) */
+          @media (min-width: @screen-sm-min) {
+            margin-left: -490px;
+            width: 979px;
+          }
+          
+          /* Medium devices (desktops, 992px and up) */
+          @media (min-width: @screen-md-min) { 
+            margin-left: -646px;
+            width: 1292px;
+          }
+
+          /* Large devices (large desktops, 1200px and up) */
+          @media (min-width: @screen-lg-min) { 
+            margin-left: -788px;
+            width: 1577px;
+          }
+        }
+      }
+
+      .bg-content {
+        background-color: fade(@ciel, 50%);
+        .make-row();
+        padding-bottom: 20px;
+      }
+    } // end body
+  } // end html
+// ----------- /end background graphics ------------------
 
   // ================ Typography base ================
     // Add style for overlock display font (eg. italic)
@@ -165,16 +173,6 @@
       }
     // ----------- /end Links -----------
   // ------------- /end Typography ---------------
-
-// ============= wrapper ============
-  .wrapper { 
-    // display: none;
-  }
-  .bg-content {
-    background-color: fade(@ciel, 50%);
-  }
-// ----------- /end wrapper --------------
-
 
 // =============== Navbar custom settings ==================================
 // other navbar settings can be found in custom-variables.less line 270
@@ -332,6 +330,12 @@
     a {
       text-decoration: none;
     }
+    .showBanner {
+      color: orange;
+      .button-size(2px; 2px; 1em; 1em; 3px);
+      background-color: @gray-lighter;
+      border: 1px dotted fade(orange, 50%); 
+    }
   }
 // -------------- /end breadcrumb ----------------- 
 
@@ -347,67 +351,27 @@
   }
 
 
-  div.banner {
+  #banner {
+    display: none;
+    .make-sm-column(12);
+
     background-color: tint(@ciel, 60%);
     margin-top: 10px;
     margin-bottom: 20px;
     border-radius: 6px 6px 6px 6px;
     border: 1px solid lighten(@gris, 20%);
-  } 
-
-  div.banner-label {
-
-    text-shadow:   0px 1px 0px tint(@gris, 40%), 
-                  0px -1px 0px shade(@gris, 70%);
-    background-color: @gris;
-    border-radius: 6px 0 0 6px;
-    padding-bottom: 10px;
-    border: 2px solid shade(@gris, 20%);
-    border-right: none;
-    .banner-filter-drop-shadow;
-    
-    // arrow shape
-    // ===========
-    // &:before {
-    //   z-index: 0;
-    //   content:"";
-    //   position: absolute;
-    //   left: 100%;
-    //   top: 2.5%;
-    //   width:0;
-    //   height: 95%;
-    //   border-top:     3.3em solid transparent;
-    //   border-left:    .8em   solid shade(@gris, 0%);
-    //   border-bottom:  3.3em solid transparent;
-    // }
-
-    h3, h4 {
-      font-weight: normal;
-      font-family: @font-family-display;
-      font-style: italic;
-    }
-    .category {
-      color: @gray-lighter;
-      font-size: 1.25em;
-      letter-spacing: .15em;
-    }
-    // .banner-name {
-    //   color: @gray-dark;
-    //   font-size: .9em;
-    //   text-transform: uppercase;
-    //   letter-spacing: 1em;
-    // }
-  }
-
-  .banner-article {
     padding-left: 20px;
     padding-top: 15px;
 
     h2 {
       font-size: 1.75em;
       margin-top: 0;
-
     }
+
+    &:hover h2 {
+      color: @link-hover-color;
+    }
+
   }
 // --------------- /end banner ------------------ 
 
@@ -442,88 +406,82 @@
 
 
   #showcase {
+    .make-sm-column(12);
     margin-bottom: 20px;
 
-    header {
-      background-color: fadeout(@bleu-logo, 70%);
-      border-top-left-radius: 1em;
-      border-top-right-radius: 1em;
-      padding-top: 5px;
-      padding-bottom: 5px;
-      text-align: center;
-      h1 {
+    // article.showing
+    article {
+      .make-row();
+      background-color: tint(@ciel, 30%);
+
+      img {
+        width: 100%;
+        .img-responsive;
+        .hidden-xs;
+      }
+
+      h3 {
+        .make-sm-column(12);
         font-family: @font-family-display;
         font-style: italic;
-        font-size: 1.25em;
-        display: inline-block;
-        margin: 0;
-        padding-right: 1em;
-        color: @bleu-logo;
-        text-shadow: 0 1px 1px @ciel;
+        color: @gray-light;
+        font-size: 1.5em;
+        letter-spacing: .15em;
+        text-shadow:  0px 1px 0px tint(@gris, 90%), 
+                      0px -1px 0px shade(@gris, 50%);
+        margin-top: 10px;
+        margin-bottom: 0;
+
       }
+      h2 {
+        .make-sm-column(12);
+        color: @bleu;
+        font-size: 3em;
+        margin-top: 0;
+        margin-bottom: 10px;
+      }
+
       p {
-        color: @bleu-logo;
-        text-shadow: 0 1px 1px @ciel;
-        margin: 0;
-        display: inline-block;
-      }
-    }
-    .showcase-image {
-      padding: 0;
-
-      .showcase-photo{
-        width: 100%;
-        height: auto;
-        border-radius: 6px;
-        padding-right: 0;
-      }
-    }
-
-    .showcase-texts {
-      padding-left: 0;
-      padding-right: 2px;
-
-        .showing {
-          background-color: tint(@ciel, 30%);
-          .showing-box-shadow;
-        }
-        .not-showing {
-          opacity: .5;
-          &:hover {
-            opacity: 1;
-        }
-        
+        .make-sm-column(6);
       }
 
-      .showcase-article {
-        .showcase-radius; // rounded edge mixin
-        border: 1px solid shade(@ciel, 10%);
-        padding: 10px;
-        padding-left: 20px; //gutter width
-
-        .category {
-          font-family: @font-family-display;
-          font-style: italic;
-          color: @gray-light;
-          font-size: 1.25em;
-          letter-spacing: .15em;
-          text-shadow:  0px 1px 0px tint(@gris, 90%), 
-                        0px -1px 0px shade(@gris, 50%);
-          margin-top: 0;
-          margin-bottom: 0;
-        }
-        h2 {
-          color: @bleu;
-          font-size: 1.5em;
-          margin-top: 0;
-          margin-bottom: 0;
-        }
-        p {
-
-        }
-      }
     }
   }
+    #other {
+
+      .make-row();
+      article {
+        .make-sm-column(4);
+        border: 1px solid green;
+
+        h3 {
+          // .make-sm-column(12);
+          // font-family: @font-family-display;
+          // font-style: italic;
+          // color: @gray-light;
+          font-size: 1em;
+          // letter-spacing: .15em;
+          // text-shadow:  0px 1px 0px tint(@gris, 90%), 
+          //               0px -1px 0px shade(@gris, 50%);
+          // margin-top: 10px;
+          // margin-bottom: 0;
+
+        }
+        h2 {
+          // .make-sm-column(12);
+          // color: @bleu;
+          font-size: 2em;
+          // margin-top: 0;
+          // margin-bottom: 10px;
+        }
+
+        p {
+          // .make-sm-column(6);
+        }
+      }
+    }
+
+  
 // -------------- /end showcase --------------------
 
 // resize images to fit column width
@@ -581,6 +539,7 @@
 // ================= news ============================
   // resize images to fit column width
     #news {
+      display:none;
       img {
         width: 100%;
         max-width: 40%;
@@ -673,13 +632,17 @@
 
 // ================= footer ============================
   .footer-container {
-    margin-top: 20px;
+    .make-row();
     height: 200px;
     padding-top: 30px;
     border: 1px solid shade(@bleu, 20%);
     background-color: desaturate(@bleu, 10%);
     color: tint(@bleu, 40%);
-    border-radius: 5px;
+    .border-top-radius(5px);
+
+    > div {
+      .make-sm-column(3);
+    }
   }
 
 // --------------- /end footer -------------------------
